# HammingDistanceLib

./: CMakeLists.txt  Doxyfile.in  LICENSE  README.md  bootstrap.bat
app/: CMakeLists.txt  calchd.cpp
lib/: CMakeLists.txt  HammingDistance.cpp  HammingDistance.h
tests/: CMakeLists.txt  HDUnitTests.cpp
